--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "^11.0.0",
+    "prismjs": "^1.24.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^13.0.0",
