--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "date-fns": "^2.11.1",
+    "github-markdown-css": "^4.0.0",
     "gray-matter": "^4.0.2",
     "next": "^11.0.0",
     "prismjs": "^1.24.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^13.0.0",
+    "remark-gfm": "^1.0.0",
     "remark-html": "^13.0.1"
   },
   "devDependencies": {
