--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-plugin-prismjs": "^2.1.0",
     "date-fns": "^2.11.1",
     "github-markdown-css": "^4.0.0",
     "gray-matter": "^4.0.2",
