--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -31,7 +31,7 @@ jobs:
       run: npm run build
 
     - name: add nojekyll
-      run: touch ./out/.nojekyll
+      run: touch ./dist/.nojekyll
 
     - name: deploy
       uses: peaceiris/actions-gh-pages@v3
